--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@vueuse/core": "^10.2.0",
     "axios": "^1.2.1",
     "quasar": "^2.6.0",
+    "sequelize": "^6.31.0",
+    "sqlite3": "^5.1.6",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.0.0",
-    "sqlite3": "^5.1.6",
-    "sequelize": "^6.31.0"
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
